<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/applogo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="Register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textColor="#000"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@null"
            android:text="Login"/>

    </LinearLayout>


</LinearLayout>