<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="128dp"
        android:layout_height="152dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/nane"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/village"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/barber_all" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="225dp"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/b2"
        android:textAlignment="center" />

    <Button
        android:id="@+id/view"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="View Appointments" />


</LinearLayout>